PR/54549: ng0: always initialize execname.